fixed CSS align issue

--- a/css/style.css
+++ b/css/style.css
@@ -119,6 +119,7 @@ div {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
   position: absolute;
   width: 50%;
   height: 50%;
